@@ -29,7 +29,7 @@ project(CIAO_IDL3_TO_XMI_BE) : acelib, install_lib, ciao_output, dance_xml_utils
   }
 }
 
-project(CIAO_IDL3_TO_XMI_EXE) : aceexe, install, ciao_output, tao_idl_fe {
+project(CIAO_IDL3_TO_XMI_EXE) : aceexe, install, ciao_output, xerces, tao_idl_fe {
   after          += CIAO_IDL3_TO_XMI_BE
   exename         = tao_idl3_to_xmi
   libs           += CIAO_IDL3_TO_XMI_BE
